[gd_scene load_steps=3 format=3 uid="uid://bqm8r4x5y2n1p"]

[ext_resource type="Texture2D" uid="uid://dtiqo6ga7aquj" path="res://textures/pushy_splash.jpg" id="1_0x5ym"]
[ext_resource type="Script" uid="uid://dqk7m9x3p8r2s" path="res://scripts/splash_screen.gd" id="2_1x5ym"]

[node name="SplashScreen" type="Control"]
script = ExtResource("2_1x5ym")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)
z_index = -10

[node name="SplashImage" type="TextureRect" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
texture = ExtResource("1_0x5ym")
expand_mode = 0
stretch_mode = 6

[node name="VersionLabel" type="Label" parent="."]
anchors_preset = 0
offset_left = 1400.0
offset_top = 1160.0
text = "Pushy Version 0.1 Beta"
horizontal_alignment = 1
custom_colors/font_color = Color(1,1,1,1)
# custom_fonts/font_size = 64

[node name="CopyrightLabel" type="Label" parent="."]
anchors_preset = 0
offset_left = 1400.0
offset_top = 1200.0
text = "Â© Bouwens Game Productions"
horizontal_alignment = 1
custom_colors/font_color = Color(1,1,1,1)
# custom_fonts/font_size = 64

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
